fix: added media query to avoid grid distortion on zooming

--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin Etch-a-Sketch</title>
     <script src="script.js" defer></script>
+    <link rel="icon" href="https://raw.githubusercontent.com/ausdotsn50/odin-recipes/main/images/odin.png">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <h1>Etch-a-Sketch</h1>
+    <p>Prerequisite: 750px - 800px screen height</p>
     <div id="container"></div>
 </body>
 </html>
