feat: clear grid

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 </head>
 <body>
     <h1>Etch-a-Sketch</h1>
-    <p>Prerequisite: 750px - 800px screen height</p>
+    <p><strong>Prerequisite:</strong> 750px - 800px screen height</p>
     <div id="container"></div>
+    <div id="btn-cont"></div>
 </body>
 </html>
