--- a/index.html
+++ b/index.html
@@ -9,9 +9,14 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Etch-a-Sketch</h1>
-    <p><strong>Prerequisite:</strong> 750px - 800px screen height</p>
-    <div id="container"></div>
-    <div id="btn-cont"></div>
+    <div class="main-cont">
+        <h1>Etch-a-Sketch</h1>
+        <p><strong>Prerequisite:</strong> 750px - 800px screen height</p>
+        <div id="container"></div>
+        <div id="btn-cont"></div>
+    </div>
+    <div class="footer-cont">
+        <p><strong>Copyright &#169; ausdotsn50 2025</strong></p>
+    </div>
 </body>
 </html>
