--- a/index.html
+++ b/index.html
@@ -14,9 +14,12 @@
         <p><strong>Prerequisite:</strong> 750px - 800px screen height</p>
         <div id="container"></div>
         <div id="btn-cont"></div>
-    </div>
-    <div class="footer-cont">
-        <p><strong>Copyright &#169; ausdotsn50 2025</strong></p>
+        
+        <footer class="footer">
+            <p><strong>ausdotsn50</strong></p>
+            <a href="https://github.com/ausdotsn50/odin-etch-a-sketch" target="__blank"><img id="footer-icon" src="https://raw.githubusercontent.com/ausdotsn50/odin-recipes/main/images/github.svg" alt="github-icon"></a>
+            <p><strong>2025</strong></p>
+        </footer>
     </div>
 </body>
 </html>
